force-app/main/default/objects/PHI_Classification_Rule__mdt/PHI_Classification_Rule__mdt.object-meta.xml
<CustomObject>
    <label>PHI Classification Rule</label>
    <pluralLabel>PHI Classification Rules</pluralLabel>
    <description>Deterministic rules used by the PHI Data Classification Engine (PHIClassificationService) to classify fields by name pattern or field type (issue #212, HIPAA pack).</description>
</CustomObject>