force-app/main/default/objects/PHI_Classification_Rule__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Classification to assign when this rule matches: PHI, Sensitive, or Non-Sensitive.</description>
    <label>Classification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>