force-app/main/default/objects/PHI_Classification_Rule__mdt/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <description>How Pattern is matched: "NameContains" (substring of field name/label) or "FieldType" (exact Schema DisplayType). Defaults to NameContains when blank.</description>
    <label>Match Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>