force-app/main/default/objects/PHI_Classification_Rule__mdt/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <description>Token to match. For Match_Type NameContains this is a lower-case substring matched against the field API name and label; for FieldType it is a Schema DisplayType name (e.g., EMAIL).</description>
    <label>Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>