force-app/main/default/objects/PHI_Classification_Rule__mdt/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <description>Human-readable explanation recorded on the registry entry when this rule matches.</description>
    <label>Rationale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>